Add grade fetchAll api
