# openapi/openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.3
 info:
   version: 1.0.0
-  title: rest-api-sample
-  discription: A sample Open API 
+  title: spocon-backend
+  discription: spocon-backend Open API 
 servers:
   - url: /
 paths:
@@ -16,9 +16,19 @@ paths:
         '200':
           description: ヘルスチェックが成功した場合
           content: {}
-        '400':
-          description: リクエスト形式が正しくない場合
-          content: {}
+  /grades:
+    get:
+      summary: グレード情報一覧の取得する
+      operationId: get-grades
+      tags:
+        - grades
+      responses:
+        '200':
+          description: グレード情報一覧の取得が成功した場合
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetGradesResponse'
   /user:
     get:
       summary: ユーザーの取得
@@ -59,6 +69,23 @@ paths:
           content: {}
 components:
   schemas:
+    GetGradesResponse:
+      type: object
+      required:
+        - grades
+      properties:
+        grades:
+          type: array
+          items:
+            type: object
+            required:
+              - id
+              - name
+            properties:
+              id:
+                type: string
+              name:
+                type: string
     GetUserResponse:
       type: object
       required:
